force-app/main/default/objects/Rpl_Placement_Drive__c/Rpl_Placement_Drive__c.object-meta.xml
<CustomObject>
    <label>Placement Drive</label>
    <nameField>
        <label>Placement Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Drives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>