force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Reva_Placement__c.field-meta.xml
<CustomField>
    <fullName>Reva_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Placement</label>
    <referenceTo>Rpl_Reva_Placement__c</referenceTo>
    <relationshipLabel>Placement Drives</relationshipLabel>
    <relationshipName>Placement_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>