force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Application_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Application_End_Time__c</fullName>
    <label>Application End Time</label>
    <type>Time</type>
</CustomField>