force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Rpl_Company__c</referenceTo>
    <relationshipLabel>Placement Drives</relationshipLabel>
    <relationshipName>Placement_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>