force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_CTC__c.field-meta.xml
<CustomField>
    <fullName>Rpl_CTC__c</fullName>
    <label>CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>