force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Duration_Of_Complete_Drive__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Duration_Of_Complete_Drive__c</fullName>
    <formula>Rpl_Last_Round_Date__c - Rpl_Event_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Of Complete Drive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>