force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Event_Date_Time__c</fullName>
    <label>Event Date Time</label>
    <type>DateTime</type>
</CustomField>