force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Event_End_Date__c</fullName>
    <label>Application End Date</label>
    <type>Date</type>
</CustomField>