force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_For_Graduating_Year__c.field-meta.xml
<CustomField>
    <fullName>Rpl_For_Graduating_Year__c</fullName>
    <inlineHelpText>For which graduating year batch of student this drive is conducted for , eg:2024</inlineHelpText>
    <label>For Graduating Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>