force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Include_Students_With_Offer_In__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Include_Students_With_Offer_In__c</fullName>
    <label>Include Students With Offer In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>