force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Job_description__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Job_description__c</fullName>
    <label>Job description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>