force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Job_Description_URL__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Job_Description_URL__c</fullName>
    <label>Job Description URL</label>
    <type>Url</type>
</CustomField>