force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Last_Round_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Last_Round_Date__c</fullName>
    <description>This is the last recruitment stage&apos;s happening date.</description>
    <label>Last Round Date</label>
    <summarizedField>Rpl_Interview__c.Rpl_Interview_Time__c</summarizedField>
    <summaryForeignKey>Rpl_Interview__c.Placement_Drive__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>