force-app/main/default/objects/Rpl_Placement_Drive__c/fields/RPL_Number_Of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>RPL_Number_Of_Applicants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Applicants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>