force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Internship Come Full Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>