force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Role__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Role__c</fullName>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>