force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Sector__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectors</valueSetName>
    </valueSet>
</CustomField>