force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Stipend__c</fullName>
    <label>Stipend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>