force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Total_Applied_And_Absent_Students__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Applied_And_Absent_Students__c</fullName>
    <label>Total Applied And Absent Students</label>
    <summaryFilterItems>
        <field>Rpl_Student_Registration_Drive__c.Rpl_IsApplied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Rpl_Student_Registration_Drive__c.Rpl_Is_Present__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Rpl_Student_Registration_Drive__c.Rpl_Placement_Drive__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>