force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Total_Eligible_Students__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Eligible_Students__c</fullName>
    <label>Total Eligible Students</label>
    <summaryForeignKey>Rpl_Student_Registration_Drive__c.Rpl_Placement_Drive__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>