force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Total_Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Interview_Round__c</fullName>
    <label>Total Interview Round</label>
    <summaryForeignKey>Rpl_Interview__c.Placement_Drive__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>