force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Total_Rejected_Students__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Rejected_Students__c</fullName>
    <label>Total Rejected Students</label>
    <summaryFilterItems>
        <field>Rpl_Student_Registration_Drive__c.Rpl_Is_Failed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Rpl_Student_Registration_Drive__c.Rpl_Placement_Drive__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>