force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Validated_Students_Only__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Validated_Students_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validated Students Only</label>
    <type>Checkbox</type>
</CustomField>