force-app/main/default/objects/Rpl_Placement_Drive__c/fields/Rpl_Venue__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Venue__c</fullName>
    <label>Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>