force-app/main/default/objects/Rpl_Placement_Drive__c/validationRules/RPL_Event_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RPL_Event_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Rpl_Event_Date_Time__c &lt;= DATETIMEVALUE(TEXT(Rpl_Event_End_Date__c) + &apos; 23:59:59&apos;)</errorConditionFormula>
    <errorMessage>Event date and time must be greater than the Application end date</errorMessage>
</ValidationRule>