force-app/main/default/objects/Rpl_Placement_Drive__c/validationRules/RPL_Event_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RPL_Event_Start_Date</fullName>
    <active>false</active>
    <description>Event start date should not be in the past</description>
    <errorConditionFormula>IF( Rpl_Event_Date__c &lt; TODAY(), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Rpl_Event_Date__c</errorDisplayField>
    <errorMessage>The event start date cannot be in the past.</errorMessage>
</ValidationRule>