force-app/main/default/objects/Rpl_Placement_Drive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Company_Name__c</columns>
    <columns>Rpl_Event_Date__c</columns>
    <columns>Rpl_Event_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reva_Placement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>